--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -16,7 +16,7 @@
 }
 
 .register-card h2 {
-    color: black;
+    color: rgb(255, 255, 255);
     margin-top: 0;
     margin-bottom: 30px;
 }
@@ -40,7 +40,7 @@
 
 .register-button {
     background-color: #420170;
-    color: black;
+    color: rgb(255, 255, 255);
     padding: 12px 20px;
     border-radius: 5px;
     border: none;
